<?xml version="1.0" encoding="utf-8"?>

<ru.ltst.u2020mvp.ui.screen.main.view.MainView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--change to fragment-->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/trending_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                tools:ignore="UnusedAttribute">

                <LinearLayout
                    android:id="@+id/trending_toolbar_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/trending_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trending_title"
                        android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"/>

                    <Spinner
                        android:id="@+id/trending_timespan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:popupBackground="@drawable/popup_background"/>
                </LinearLayout>
            </android.support.v7.widget.Toolbar>

            <com.livetyping.library.CannyViewAnimator
                android:id="@+id/trending_animator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inAnimation="@android:anim/fade_in"
                android:outAnimation="@android:anim/fade_out">

                <RelativeLayout
                    android:id="@+id/trending_loading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="48dp">

                    <ImageView
                        android:id="@+id/trending_loading_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="32dp"
                        android:layout_marginTop="32dp"
                        android:clickable="true"
                        android:scaleType="center"
                        android:src="@drawable/loading"/>

                    <TextView
                        android:id="@+id/trending_loading_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/trending_loading_image"
                        android:layout_centerHorizontal="true"
                        android:gravity="center_horizontal"
                        android:text="@string/loading_message"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/trending_error"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="48dp">

                    <ImageView
                        android:id="@+id/trending_error_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="32dp"
                        android:layout_marginTop="32dp"
                        android:src="@drawable/error"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/trending_error_image"
                        android:gravity="center_horizontal"
                        android:text="@string/error_title"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="34sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/trending_error_image"
                        android:gravity="center_horizontal"
                        android:text="@string/error_message"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/trending_network_error"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="48dp">

                    <ImageView
                        android:id="@+id/trending_network_error_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="32dp"
                        android:layout_marginTop="32dp"
                        android:src="@drawable/error"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/trending_network_error_image"
                        android:gravity="center_horizontal"
                        android:text="@string/network_error_title"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="34sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/trending_network_error_image"
                        android:gravity="center_horizontal"
                        android:text="@string/network_error_message"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/trending_empty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="48dp">

                    <ImageView
                        android:id="@+id/trending_empty_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="32dp"
                        android:layout_marginTop="32dp"
                        android:src="@drawable/empty"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_above="@id/trending_empty_image"
                        android:gravity="center_horizontal"
                        android:text="@string/empty_title"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="34sp"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/trending_empty_image"
                        android:gravity="center_horizontal"
                        android:text="@string/empty_message"
                        />
                </RelativeLayout>

                <android.support.v4.widget.SwipeRefreshLayout
                    android:id="@+id/trending_swipe_refresh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/trending_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />
                </android.support.v4.widget.SwipeRefreshLayout>
            </com.livetyping.library.CannyViewAnimator>
        </LinearLayout>
    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/main_navigation"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#fff"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/main_drawer_header"
        app:menu="@menu/main_drawer"/>
</ru.ltst.u2020mvp.ui.screen.main.view.MainView>
